feat(analytics): 集成第三方分析服务并添加文章创建脚本
- 添加 Plausible 和 Umami 第三方分析支持
- 在 BaseLayout 中集成 Analytics 组件
- 更新 CSP 头部以允许分析服务域名
- 添加 .idea/ 和 .claude/ 到 gitignore
- 创建 new-post.mjs 脚本用于快速生成双语博客文章
- 添加 npm run new:post 命令到 package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "new:post": "node scripts/new-post.mjs"
   },
   "dependencies": {
     "@astrojs/mdx": "^3.1.0",
@@ -25,4 +26,3 @@
     "tailwindcss": "^3.4.1"
   }
 }
-
