--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "source": "/(.*)",
       "headers": [
         { "key": "Strict-Transport-Security", "value": "max-age=31536000; includeSubDomains; preload" },
-        { "key": "Content-Security-Policy", "value": "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; font-src 'self'; object-src 'none'; base-uri 'self'; frame-ancestors 'none'" },
+        { "key": "Content-Security-Policy", "value": "default-src 'self'; script-src 'self' https://plausible.io https://analytics.umami.is; connect-src 'self' https://plausible.io https://analytics.umami.is; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https://plausible.io; font-src 'self'; object-src 'none'; base-uri 'self'; frame-ancestors 'none'" },
         { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
         { "key": "X-Content-Type-Options", "value": "nosniff" },
         { "key": "Permissions-Policy", "value": "camera=(), geolocation=(), microphone=()" }
@@ -20,4 +20,3 @@
     }
   ]
 }
-
