feat(projects): 更新项目列表配置
- 替换示例产品为实际项目：代理商城后端、Claude 技能插件集、个人主页
- 添加新的个人主页项目条目
- 移除人力资源管理系统和售后管理系统的简历项目信息
- 更新个人主页的 GitHub 链接地址
- 修改项目描述以反映真实的技术栈和功能特性

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,20 +1,29 @@
 [
   {
     "id": "p1",
-    "name_zh": "示例产品 A",
-    "name_en": "Sample Product A",
-    "desc_zh": "一个用于……的轻量工具",
-    "desc_en": "A lightweight tool for ...",
-    "url": "https://example.com/a",
+    "name_zh": "代理商城后端",
+    "name_en": "Agent Mall Backend",
+    "desc_zh": "代理商城后端服务，基于 Spring Boot 3 + MyBatis Plus 构建",
+    "desc_en": "Agent mall backend service built with Spring Boot 3 + MyBatis Plus",
+    "url": "",
     "highlight": true
   },
   {
     "id": "p2",
-    "name_zh": "示例产品 B",
-    "name_en": "Sample Product B",
-    "desc_zh": "聚焦……的开源库",
-    "desc_en": "An open-source library for ...",
-    "url": "https://example.com/b",
+    "name_zh": "Claude 技能插件集",
+    "name_en": "Claude Skills Collection",
+    "desc_zh": "为 Claude Code 开发的实用技能插件集，已开源",
+    "desc_en": "Practical skill plugins for Claude Code, open-sourced",
+    "url": "https://github.com/gxj1134506645/happy-claude-skills",
+    "badge": "OSS"
+  },
+  {
+    "id": "p3",
+    "name_zh": "个人主页",
+    "name_en": "Personal Homepage",
+    "desc_zh": "基于 Astro + Tailwind CSS 的静态个人主页与技术博客",
+    "desc_en": "Static personal homepage and tech blog based on Astro + Tailwind CSS",
+    "url": "https://github.com/gxj1134506645/gfish-home",
     "badge": "OSS"
   }
 ]
