refactor(homepage): 重构首页布局并调整导航结构
- 移除首页的联系方式二维码区域
- 将社交媒体链接从首页移至新的联系页面
- 更新导航菜单，将links替换为contact并调整路由
- 重命名项目名称以保持一致性
- 创建独立的中英文联系页面
- 调整首页内容区块顺序和样式间距

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,8 +1,8 @@
 [
   {
     "id": "p1",
-    "name_zh": "代理商城后端",
-    "name_en": "Agent Mall Backend",
+    "name_zh": "agent_mall_server",
+    "name_en": "agent_mall_server",
     "desc_zh": "代理商城后端服务，基于 Spring Boot 3 + MyBatis Plus 构建",
     "desc_en": "Agent mall backend service built with Spring Boot 3 + MyBatis Plus",
     "url": "",
@@ -10,8 +10,8 @@
   },
   {
     "id": "p2",
-    "name_zh": "Claude 技能插件集",
-    "name_en": "Claude Skills Collection",
+    "name_zh": "happy-claude-skills",
+    "name_en": "happy-claude-skills",
     "desc_zh": "为 Claude Code 开发的实用技能插件集，已开源",
     "desc_en": "Practical skill plugins for Claude Code, open-sourced",
     "url": "https://github.com/gxj1134506645/happy-claude-skills",
@@ -19,8 +19,8 @@
   },
   {
     "id": "p3",
-    "name_zh": "个人主页",
-    "name_en": "Personal Homepage",
+    "name_zh": "gfish-home",
+    "name_en": "gfish-home",
     "desc_zh": "基于 Astro + Tailwind CSS 的静态个人主页与技术博客",
     "desc_en": "Static personal homepage and tech blog based on Astro + Tailwind CSS",
     "url": "https://github.com/gxj1134506645/gfish-home",
